--- a/app/article.html
+++ b/app/article.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div class="services-list">
+                <div class="services-list  anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                     <a href="" class="single-service">
                         <div class="txt">
 
@@ -126,8 +126,8 @@
                 <div class="services-sub__head">
                     <span class="title">корисне для тебе</span>
                 </div>
-                <div class="blog-list">
-                    <a href="" class="single-blog">
+                <div class="blog-list counting-delay">
+                    <a href="" class="single-blog anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -140,7 +140,7 @@
                                 бренду провели глибоке дослідження цієї теми.</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -153,7 +153,7 @@
                             <p>Ти завагітніла під час курсу епіляції. Що робити?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
