--- a/app/blog.html
+++ b/app/blog.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="prices-hero">
                     <div class="prices-hero__left">
-                        <div class="txt">
+                        <div class="txt anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                             <h1 class="title">корисне для тебе </h1>
                             <p>Вибір ідеального салону краси - це важлива річ для кожної жінки. У нашій мережі салонів
                                 депіляції тобі завжди буде зручно обирати, адже ми розташовані у різних частинах міста.
@@ -45,8 +45,8 @@
 
         <div class="blog">
             <div class="container">
-                <div class="blog-list">
-                    <a href="" class="single-blog">
+                <div class="blog-list counting-delay">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -59,7 +59,7 @@
                                 бренду провели глибоке дослідження цієї теми.</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -72,7 +72,7 @@
                             <p>Ти завагітніла під час курсу епіляції. Що робити?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -85,7 +85,7 @@
                             <p>Що потрібно знати, збираючись на епіляцію зони бікіні вперше?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -97,7 +97,7 @@
                             <p>Лазерна епіляція – боляче????? Чи вірити рекламі про безболісну епіляцію?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -110,7 +110,7 @@
                             <p>Чи можна робити епіляцію, якщо користуєшся автозасмагою?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -124,7 +124,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -137,7 +137,7 @@
                                 бренду провели глибоке дослідження цієї теми.</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -150,7 +150,7 @@
                             <p>Ти завагітніла під час курсу епіляції. Що робити?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -163,7 +163,7 @@
                             <p>Що потрібно знати, збираючись на епіляцію зони бікіні вперше?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -175,7 +175,7 @@
                             <p>Лазерна епіляція – боляче????? Чи вірити рекламі про безболісну епіляцію?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
@@ -188,7 +188,7 @@
                             <p>Чи можна робити епіляцію, якщо користуєшся автозасмагою?</p>
                         </div>
                     </a>
-                    <a href="" class="single-blog">
+                    <a href="" class="single-blog  anim" data-anim-delay="20" data-anim-duration="960" data-anim="fade-up">
                         <div class="img">
                             <div class="tags">
                                 <div class="tag">#Лазерна епіляція</div>
