--- a/app/faq.html
+++ b/app/faq.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="prices-hero">
                     <div class="prices-hero__left">
-                        <div class="txt">
+                        <div class="txt anim-stage" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up">
                             <h1 class="title">FAQ <strong>#pland_faq</strong></h1>
                             <p>Тобі потрібні відповіді, і ми готові поділитися ними! Цей розділ - твій особистий гід у
                                 світі епіляції. Тут ти знайдеш відповіді на всі питання, які турбують тебе щодо наших
@@ -41,7 +41,7 @@
 
                 </div>
                 <div class="faq-images">
-                    <div class="faq-images__left">
+                    <div class="faq-images__left anim-stage" data-anim-delay="170" data-anim-duration="720" data-anim="fade">
                         <div class="img">
                             <img class="lazyload" data-src="./img/faqleft1.jpg" alt="">
                         </div>
@@ -52,12 +52,12 @@
                             <img class="lazyload" src="./img/faqim1.svg" alt="">
                         </div>
                     </div>
-                    <div class="faq-images__right">
-                        <a href="" class="btn btn--green">
+                    <div class="faq-images__right anim-stage" data-anim-delay="170" data-anim-duration="720" data-anim="fade">
+                        <a href="" class="btn btn--green btn-go" data-to="faq-list">
                             <div class="arrow-ic">
                                 <img src="./img/arrow-r-m.svg" alt="">
                             </div>
-                            <p>Переглянути ціни</p>
+                            <p>Переглянути FAQ</p>
                             <div class="arrow-ic">
                                 <img src="./img/arrow-r-m.svg" alt="">
                             </div>
@@ -78,8 +78,8 @@
             <div class="container">
                 <div class="faq-container">
                     <h2>Часті запитання та відповіді про епіляцію</h2>
-                    <div class="faq-list">
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                    <div class="faq-list counting-delay">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №1: Чи болюча лазерна епіляція?</p>
                             </div>
@@ -91,7 +91,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №2: Скільки сеансів потрібно для постійного результату?
                                 </p>
@@ -104,7 +104,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -120,7 +120,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №1: Чи болюча лазерна епіляція?</p>
                             </div>
@@ -132,7 +132,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №2: Скільки сеансів потрібно для постійного результату?
                                 </p>
@@ -145,7 +145,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -161,7 +161,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №1: Чи болюча лазерна епіляція?</p>
                             </div>
@@ -173,7 +173,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №2: Скільки сеансів потрібно для постійного результату?
                                 </p>
@@ -186,7 +186,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -202,7 +202,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №1: Чи болюча лазерна епіляція?</p>
                             </div>
@@ -214,7 +214,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №2: Скільки сеансів потрібно для постійного результату?
                                 </p>
@@ -227,7 +227,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -244,7 +244,7 @@
                             </div>
                         </div>
 
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -260,7 +260,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №1: Чи болюча лазерна епіляція?</p>
                             </div>
@@ -272,7 +272,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №2: Скільки сеансів потрібно для постійного результату?
                                 </p>
@@ -285,7 +285,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="single-faq" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <div class="single-faq anim" data-anim-delay="170" data-anim-duration="720" data-anim="fade-up" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
                             <div class="faq-head">
                                 <p itemprop="name">Запитання №3: Чи можна проводити лазерну епіляцію в літній
                                     період?</p>
@@ -310,14 +310,14 @@
 
         <section class="test-drive-block">
             <div class="container">
-                <div class="test-drive ">
-                    <div class="img">
+                <div class="test-drive counting-delay">
+                    <div class="img  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                         <img class="lazyload" data-src="./img/why4.jpg" alt="">
                     </div>
-                    <div class="drive-img">
+                    <div class="drive-img  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <img class="lazyload" data-src="./img/test-drive.svg" alt="">
                     </div>
-                    <div class="test-drive__text">
+                    <div class="test-drive__text  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                         <div class="left">
                             <span>Безкоштовний тест-драйв!</span>
                             <p>Ти отримаєш чесні відповіді на всі свої запитання і спробуєш відчуття від лазеру,
