--- a/app/prices.html
+++ b/app/prices.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="prices-hero">
                     <div class="prices-hero__left">
-                        <div class="txt">
+                        <div class="txt anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                             <h1 class="title">Ціни на наші послуги</h1>
                             <p>Ласкаво просимо до унікального світу краси та догляду, який ми створили для тебе у наших
                                 салонах. Наша мережа салонів краси є справжнім оазисом для тих, хто прагне доглядати за
@@ -51,7 +51,8 @@
                             </a>
                         </div>
 
-                        <div class="prices-hero__left-imgs">
+                        <div class="prices-hero__left-imgs  anim-stage" data-anim-delay="200" data-anim-duration="1560"
+                             data-anim="fade">
                             <div class="img">
                                 <img class="lazyload" data-src="./img/prl1.jpg" alt="">
                             </div>
@@ -61,7 +62,8 @@
                         </div>
 
                     </div>
-                    <div class="prices-hero__right">
+                    <div class="prices-hero__right anim-stage" data-anim-delay="100" data-anim-duration="960"
+                         data-anim="fade-up">
                         <div class="priceimg">
                             <div class="img">
                                 <img class="lazyload" data-src="./img/pricimg.jpg" alt="">
@@ -80,7 +82,8 @@
         <section class="prices-tabs">
             <div class="container">
                 <div class="prices-tabs__cont tabs-owner">
-                    <div class="prices-tabs__top">
+                    <div class="prices-tabs__top anim-stage" data-anim-delay="100" data-anim-duration="960"
+                         data-anim="fade-up">
                         <div class="tab-btn active">
                             <p>Лазерна епіляція ціна</p>
                         </div>
@@ -93,12 +96,13 @@
                             <div class="prices-cont">
                                 <div class="prices-left">
 
-                                    <div class="price-list">
+                                    <div class="price-list counting-delay">
                                         <div class="price-list__head">
                                             <span class="price-title">ПОСЛУГА</span>
                                             <p>ціна</p>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>обличчя</span>
 
@@ -113,7 +117,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Пахви</span>
 
@@ -132,7 +137,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>торс</span>
 
@@ -163,7 +169,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Бікіні</span>
 
@@ -178,7 +185,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Ноги</span>
 
@@ -193,7 +201,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Поімпульсно</span>
 
@@ -204,8 +213,6 @@
                                                 </li>
                                             </ul>
                                         </div>
-
-
                                     </div>
                                 </div>
                                 <div class="price-right">
@@ -215,7 +222,8 @@
                                             <img class="lazyload" data-src="./img/price-bg.png" alt="">
                                         </div>
                                         <div class="price-right__bubble">
-                                            <ul>
+                                            <ul class=" anim-stage" data-anim-delay="100" data-anim-duration="830"
+                                                data-anim="fade-up">
                                                 <li>
                                         <span>
                                             -plan minimum
@@ -250,7 +258,8 @@
 
                                     </div>
 
-                                    <div class="prices-bubbles">
+                                    <div class="prices-bubbles anim-stage" data-anim-delay="200"
+                                         data-anim-duration="830" data-anim="fade-up">
                                         <div class="single-bubble">
                                             <div class="bg">
                                                 <img class="lazyload" data-src="./img/price-sec.svg" alt="">
@@ -311,12 +320,13 @@
                             <div class="prices-cont">
                                 <div class="prices-left">
 
-                                    <div class="price-list">
+                                    <div class="price-list counting-delay">
                                         <div class="price-list__head">
                                             <span class="price-title">ПОСЛУГА</span>
                                             <p>ціна</p>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>обличчя</span>
 
@@ -331,7 +341,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Пахви</span>
 
@@ -350,7 +361,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>торс</span>
 
@@ -381,7 +393,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Бікіні</span>
 
@@ -396,7 +409,8 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="price-list__cont">
+                                        <div class="price-list__cont anim" data-anim-delay="100"
+                                             data-anim-duration="830" data-anim="fade-up">
 
                                             <span>Ноги</span>
 
@@ -411,8 +425,6 @@
                                                 </li>
                                             </ul>
                                         </div>
-
-
                                     </div>
                                 </div>
                                 <div class="price-right">
@@ -422,7 +434,8 @@
                                             <img class="lazyload" data-src="./img/price-bg.png" alt="">
                                         </div>
                                         <div class="price-right__bubble">
-                                            <ul>
+                                            <ul class=" anim-stage" data-anim-delay="100" data-anim-duration="830"
+                                                data-anim="fade-up">
                                                 <li>
                                         <span>
                                             -plan minimum
@@ -457,7 +470,8 @@
 
                                     </div>
 
-                                    <div class="prices-bubbles">
+                                    <div class="prices-bubbles anim-stage" data-anim-delay="200"
+                                         data-anim-duration="830" data-anim="fade-up">
                                         <div class="single-bubble">
                                             <div class="bg">
                                                 <img class="lazyload" data-src="./img/price-sec.svg" alt="">
@@ -523,14 +537,14 @@
 
         <section class="test-drive-block">
             <div class="container">
-                <div class="test-drive ">
-                    <div class="img">
+                <div class="test-drive counting-delay">
+                    <div class="img  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                         <img class="lazyload" data-src="./img/why4.jpg" alt="">
                     </div>
-                    <div class="drive-img">
+                    <div class="drive-img  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <img class="lazyload" data-src="./img/test-drive.svg" alt="">
                     </div>
-                    <div class="test-drive__text">
+                    <div class="test-drive__text  anim" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                         <div class="left">
                             <span>Безкоштовний тест-драйв!</span>
                             <p>Ти отримаєш чесні відповіді на всі свої запитання і спробуєш відчуття від лазеру,
@@ -559,7 +573,6 @@
     <div class="spacer-for-empty">
 
     </div>
-
 
 
 </main>
