--- a/app/work.html
+++ b/app/work.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="prices-hero">
                     <div class="prices-hero__left">
-                        <div class="txt">
+                        <div class="txt anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                             <h1 class="title">Вакансії та робота</h1>
                             <p>У наших салонах краси завжди раді талановитим та досвідченим фахівцям в галузі депіляції.
                                 Ми відкриті до нових співпраць та завжди шукаємо професіоналів, які готові долучитися до
@@ -44,7 +44,7 @@
                     </div>
 
                 </div>
-                <div class="work-image">
+                <div class="work-image anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                     <div class="img2">
                         <img class="lazyload" data-src="./img/serv2.svg" alt="">
                     </div>
@@ -61,7 +61,7 @@
 
         <section class="work-tabs">
             <div class="container">
-                <div class="work-tabs__list">
+                <div class="work-tabs__list anim-stage" data-anim-delay="100" data-anim-duration="720" data-anim="fade-up">
                     <div class="single-work-tab">
 
                         <div class="single-work__head">
@@ -69,7 +69,7 @@
 
                         </div>
                         <div class="single-work__center" style="display: none">
-                            <div class="single-work__left">
+                            <div class="single-work__left anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                                 <p>Знайомся, ми -plan D — перша в Україні мережа салонів епіляції для дівчат. Детальніше
                                     про команду тут <a href="" target="_blank">https://instagram.com/plan.d.team</a>.
                                 </p>
@@ -184,7 +184,7 @@
 
                         </div>
                         <div class="single-work__center" style="display: none">
-                            <div class="single-work__left">
+                            <div class="single-work__left anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                                 <p>Знайомся, ми -plan D — перша в Україні мережа салонів епіляції для дівчат. Детальніше
                                     про команду тут <a href="" target="_blank">https://instagram.com/plan.d.team</a>.
                                 </p>
@@ -299,7 +299,7 @@
 
                         </div>
                         <div class="single-work__center" style="display: none">
-                            <div class="single-work__left">
+                            <div class="single-work__left anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                                 <p>Знайомся, ми -plan D — перша в Україні мережа салонів епіляції для дівчат. Детальніше
                                     про команду тут <a href="" target="_blank">https://instagram.com/plan.d.team</a>.
                                 </p>
@@ -414,7 +414,7 @@
 
                         </div>
                         <div class="single-work__center" style="display: none">
-                            <div class="single-work__left">
+                            <div class="single-work__left anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                                 <p>Знайомся, ми -plan D — перша в Україні мережа салонів епіляції для дівчат. Детальніше
                                     про команду тут <a href="" target="_blank">https://instagram.com/plan.d.team</a>.
                                 </p>
@@ -532,7 +532,7 @@
     <div class="work-footer">
         <div class="container">
             <div class="work-footer__cont">
-                <div class="work-footer__left">
+                <div class="work-footer__left anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade">
                     <div class="work-img">
                         <img class="lazyload" data-src="./img/workfimg.jpg" alt="">
                     </div>
@@ -542,7 +542,7 @@
                     </div>
                 </div>
                 <div class="work-footer__right">
-                    <div class="txt">
+                    <div class="txt anim-stage" data-anim-delay="100" data-anim-duration="960" data-anim="fade-up">
                         <p><strong>Вакансія - майстер епіляції</strong></p>
 
                         <p>У нашому колективі завжди місце для талановитих та професійних майстрів лазерної епіляції. Ми
